--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acornima" version="1.1.0" />
+  <package id="Jint" version="4.1.0" manuallyInstalled="true" />
   <package id="LuaCSharp" version="0.2.1" manuallyInstalled="true" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" />
 </packages>
