--- a/Assets/Scripts/LuaAdventure.asmdef
+++ b/Assets/Scripts/LuaAdventure.asmdef
@@ -7,7 +7,8 @@
         "GUID:3aa1866a824b5472da50fe142777d95f",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:c7430d7c331b24775807565133e451ac"
+        "GUID:c7430d7c331b24775807565133e451ac",
+        "GUID:8452dd42aeb0b4dc6a4d7c803ae1bbe4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
